--- a/Exercises/Development/listAStackPop.html
+++ b/Exercises/Development/listAStackPop.html
@@ -50,26 +50,26 @@ Written by Junyang Chen and Cliff Shaffer
 
 <script>
 var jsav,           // The JSAV object
-  answerArr = [], // The (internal) array that stores the correct answer
-  cloneArr = [],  // A copy of the (internal) array at the start of the exercise for reset
+  answerArr = [],   // The (internal) array that stores the correct answer
+  cloneArr = [],    // A copy of the (internal) array at the start of the exercise for reset
   returnVal,
-  jsavArr,        // The array that the user manipulates (JSAV object)
+  jsavArr,          // The array that the user manipulates (JSAV object)
   arrMax,
   arrReturn,
   labelReturn,
   selected_pointer,
-  pointerIndex,   // The index of array by which the pointer points to.
-  pointerTop,     // 'top' pointer
+  pointerIndex,     // The index of array by which the pointer points to.
+  pointerTop,       // 'top' pointer
   status,
-  userInput,      // Boolean: Tells us if user ever did anything
-  selected_index; // Position that has been selected by user for swap
+  userInput,        // Boolean: Tells us if user ever did anything
+  selected_index;   // Position that has been selected by user for swap
 
 JSAV._types.Pointer.prototype.click = function(fn){
   var pointer = this;
   this.element.click(function(){fn(pointer)});
 }
 // pointer click handler
-var pclick = function(pointer){
+function pclick(pointer){
   if(status == 1){
     jsavArr.css(selected_index, {"font-size": "100%"});
     jsavArr.unhighlight(selected_index);
@@ -88,7 +88,7 @@ var pclick = function(pointer){
 }
 
 // Click event handler on the array 'jsavArr'
-var clickHandler = function (index, e) {
+function clickHandler(index, e) {
   if (status == 0) { // if nothing currently selected
     jsavArr.css(index, {"font-size": "110%"});
 	selected_index = index;
@@ -111,7 +111,7 @@ var clickHandler = function (index, e) {
 };
 
 // Click event handler on the array 'arrMax'
-var maxClickHandler = function (index, e) {
+function maxClickHandler(index, e) {
   if (status == 2){
     selected_pointer.target(arrMax, {relativeIndex : 0,targetIndex : 0});
     jsav.container.trigger("jsav-updaterelative");
@@ -123,7 +123,7 @@ var maxClickHandler = function (index, e) {
 }
 
 // reset function definition
-var f_reset = function (max_size, arr_size) {
+function f_reset(max_size, arr_size) {
   selected_index = -1;
   status = 0; 
 
@@ -152,7 +152,7 @@ var f_reset = function (max_size, arr_size) {
 };
 
 // Initialise the exercise
-var initJSAV = function (max_size, arr_size, insertValue) {
+function initJSAV(max_size, arr_size, insertValue) {
   var i, j;
   userInput = false;
   selected_index = -1;
@@ -182,12 +182,12 @@ var initJSAV = function (max_size, arr_size, insertValue) {
   $("#remove").click(function () {
     if(selected_index !== -1){
       jsav.effects.moveValue(jsavArr, selected_index, arrReturn, 0);
-	  jsavArr.css(selected_index, { "background-color": "#ddd" });
-	  jsavArr.css(selected_index, {"font-size": "100%"});
-	  jsavArr.unhighlight(selected_index);
-	  selected_index = -1;
-	  status = 0;
-	  userInput = true;
+      jsavArr.css(selected_index, { "background-color": "#ddd" });
+      jsavArr.css(selected_index, {"font-size": "100%"});
+      jsavArr.unhighlight(selected_index);
+      selected_index = -1;
+      status = 0;
+      userInput = true;
     }
   });
 
@@ -196,7 +196,7 @@ var initJSAV = function (max_size, arr_size, insertValue) {
 };
 
 // Check user's answer for correctness: User's array must match answer
-var checkAnswer = function (max_size, arr_size) {
+function checkAnswer(max_size, arr_size) {
   if (arrReturn.value(0) !== returnVal)
   {
     return false;
