--- a/Exercises/Development/listLQueueEnqueue.html
+++ b/Exercises/Development/listLQueueEnqueue.html
@@ -1,12 +1,12 @@
 <!--
-List-based Queue push mini-proficiency exercise.
+List-based Enqueue mini-proficiency exercise.
 Written by Junyang Chen and Cliff Shaffer
 -->
 
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>List-based Queue push Proficiency Exercise</title>
+  <title>List-based Enqueue Proficiency Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transform.light.js"></script>
@@ -60,34 +60,35 @@ Written by Junyang Chen and Cliff Shaffer
 </head>
 <body>
 <script>
-var jsav,         // The JSAV object
-  leftMargin,
-  topMargin,
-  answerArr = [], // The (internal) array that stores the correct answer
-  answerOrderArr = [], // The (internal) array that stores the correct order of nodes
-  answFrontNode,
-  answRearNode,
-  orderArr = [],  // Stores the node.id() of the jsavList
-  listArr = [],   // Stores the jsav list values
-  front,           // pointer front
-  rear,            // pointer rear
-  front_target,
-  rear_target,
-  selected_pointer,  // pointer that is clicked, which will always be front here.
-  status = 0,    // Nothing is currently selected, status = 0;
-				 // pointer area is selected, status = 2;
-				 // pointer top is selected, status = 3.
-  newNodeGen,    
-  newLinkNode,   // New node
-  odsa_head,      // head of the list for correct answer
-  connections = [],
-  fromNode,
-  toNode,
-  jsavList,        // JSAV list
-  listSize,        // JSAV list size
-  insertValue,     // Value to be inserted
-  userInput;      // Boolean: Tells us if user ever did anything
+var jsav,               // The JSAV object
+  leftMargin,           //
+  topMargin,            //
+  answerArr = [],       // The (internal) array that stores the correct answer
+  answerOrderArr = [],  // The (internal) array that stores the correct order of nodes
+  answFrontNode,        //
+  answRearNode,         //
+  orderArr = [],        // Stores the node.id() of the jsavList
+  listArr = [],         // Stores the jsav list values
+  front,                // pointer front
+  rear,                 // pointer rear
+  front_target,         //
+  rear_target,          //
+  selected_pointer,     // pointer that is clicked, which will always be front here.
+  status = 0,           // Nothing is currently selected, status = 0;
+                        // pointer area is selected, status = 2;
+                        // pointer top is selected, status = 3.
+  newNodeGen,           //
+  newLinkNode,          // New node
+  odsa_head,            // head of the list for correct answer
+  connections = [],     //
+  fromNode,             //
+  toNode,               //
+  jsavList,             // JSAV list
+  listSize,             // JSAV list size
+  insertValue,          // Value to be inserted
+  userInput;            // Boolean: Tells us if user ever did anything
 
+// JSAV extensions
 JSAV._types.ds.ListNode.prototype.pNum = 0;
 JSAV._types.ds.ListNode.prototype.odsa_next = {};
 JSAV._types.ds.ListNode.prototype.odsa_tail = {};
@@ -98,7 +99,7 @@ JSAV._types.Pointer.prototype.click = function(fn){
 }
 
 // pointer click handler
-var pclick = function(pointer){
+function pclick(pointer){
   selected_pointer = pointer;
   selected_pointer.element.toggleClass('highlight');
   status = 3;
@@ -107,7 +108,6 @@ var pclick = function(pointer){
 
 // Helper function for seting pointer
 function setPointer(name, node, opt){
-
   var pointerRight = {anchor: "right top",
     myAnchor: "left bottom",
     left: -10,
@@ -195,7 +195,7 @@ function Connect(obj1, obj2){
 }
 
 // Click event handler on the list
-var clickHandler = function (e) {
+function clickHandler(e) {
   var setright = {anchor: "right top", myAnchor: "left bottom", left: -10, top:-20};
   var setleft = {anchor: "left top", myAnchor: "right bottom", left: 15, top:-20};
   var x = parseInt(e.pageX - $('#' + this.id()).offset().left);
@@ -263,7 +263,7 @@ function addTail(node){
   node.odsa_next = null;
 }
 
-var f_newnode = function() { 
+function f_newnode() { 
   if (newNodeGen == false) {
     if(status == 2){
       $('#' + fromNode.id() + " .jsavpointerarea:first").removeClass('bgColor');
@@ -339,7 +339,7 @@ var f_newnode = function() {
   userInput = true;
 }
 
-var f_insert = function () {
+function f_insert() {
   if(newLinkNode){
     jsav.effects.copyValue(jsavArr, 0 , newLinkNode);
     newLinkNode.unhighlight();
@@ -348,7 +348,7 @@ var f_insert = function () {
 };
 
 // reset function definition
-var f_reset = function () {
+function f_reset() {
   leftMargin = 20;
   topMargin = 60;
   userInput = false;
@@ -356,9 +356,11 @@ var f_reset = function () {
   connections = [];
   status = 0;  
 
+  // Clear old JSAV canvas
   if($("#jsav")){
     $("#jsav").empty();
   }
+
   jsav = new JSAV("jsav");	
   jsavList = jsav.ds.list({"nodegap": 30, "top": topMargin, left: leftMargin});
   for(var i = listSize - 1; i >= 0; i--)
@@ -370,60 +372,62 @@ var f_reset = function () {
   rear = setPointer("rear", jsavList.get(listSize - 1));
   jsav.recorded();
   jsav.forward();
+
   for(var i = 0; i < listSize; i ++)
   {
     orderArr[i] = jsavList.get(i).id();
     jsavList.get(i).odsa_next = jsavList.get(i).next();
     jsavList.get(i).odsa_edgeToNext = jsavList.get(i).edgeToNext();
-    //jsavList.get(i).pNum = 0;
   }
   jsavList.get(listSize - 1).odsa_tail = jsav.g.line(leftMargin + 34 + (listSize - 1)*74, 32 + topMargin,
                           leftMargin + 44 + (listSize - 1)*74, 1 + topMargin,{"opacity": 100,"stroke-width": 1});
   answFrontNode = jsavList.get(0);
-  front.click(pclick);
-  rear.click(pclick);
+
   // Hidden JSAV array for insert animation
   jsavArr = jsav.ds.array([insertValue], {indexed: false, center: false,left: 650, top: -70});
 
-  jsavList.click(clickHandler); // Rebind click handler after reset
+  // Bind click handlers
+  front.click(pclick);
+  rear.click(pclick);
+  jsavList.click(clickHandler); 
+
   userInput = false;
 };
+
 // Initialise the exercise
-var initJSAV = function (size, value) {
-  
-  // Out with the old
+function initJSAV(size, value) {
+  // assign values to global variables
   answerArr.length = 0;
-    // Give random numbers in range 0..999
+  listSize = size;
+  insertValue = value;
+
+  // Give random numbers in range 0..999
   answerArr[0] = "null";
   for (i = 1; i < size+1; i++) {
     answerArr[i] = Math.floor(Math.random() * 1000);
   }
   listArr = answerArr.slice(0);
 
-  
-  listSize = size;
-  insertValue = value;
-
   f_reset();
 
   // correct answer
   answerArr.splice(listSize, 0, insertValue);
   
-  // Set up handler for newnode
+  // Set up click handlers
   $("#NewNode").click(function () { f_newnode(); });
-
   $("#insert").click(function () { f_insert(); });
-
   // Set up handler for reset button
   $("#reset").click(function () { f_reset(); });
 };
 
-// Check user's answer for correctness: User's array must match answer
-var checkAnswer = function (arr_size) {
-  var i = 0;
-  var curr = jsavList.get(0);
+// Check user's answer for correctness
+function checkAnswer(arr_size) {
+  var i = 0, 
+    curr = jsavList.get(0);
+
   if(front.target() !== answFrontNode){return false;}
   if(rear.target()!== answRearNode) {return false};
+
   while(curr){
     if(curr.value() == answerArr[i] && curr.id() == answerOrderArr[i]){
       curr = curr.odsa_next;
@@ -432,6 +436,7 @@ var checkAnswer = function (arr_size) {
       return false;
     }
   }
+
   if(i == listSize + 1)
   {
     return true;
