--- a/Exercises/Development/listLStackPush.html
+++ b/Exercises/Development/listLStackPush.html
@@ -60,29 +60,29 @@ Written by Junyang Chen and Cliff Shaffer
 </head>
 <body>
 <script>
-var jsav,         // The JSAV object
-  answerArr = [], // The (internal) array that stores the correct answer
-  answerOrderArr = [], // The (internal) array that stores the correct order of nodes
-  orderArr = [],  // Stores the node.id() of the jsavList
-  listArr = [],   // Stores the jsav list values
-  ptop,           // pointer top
-  selected_pointer,  // pointer that is clicked, which will always be ptop here.
-  status = 0,    // Nothing is currently selected, status = 0;
-				 // pointer area is selected, status = 2;
-				 // pointer top is selected, status = 3.
-  newNodeGen,    
-  newLinkNode,   // New node
-  odsa_head,      // head of the list for correct answer
-  connections = [],
-  fromNode,
-  toNode,
-  jsavList,        // JSAV list
-  listSize,        // JSAV list size
-  insertValue,     // Value to be inserted
-  userInput,      // Boolean: Tells us if user ever did anything
-  selected_node; // Position that has been selected by user for swap
+var jsav,               // The JSAV object
+  answerArr = [],       // The (internal) array that stores the correct answer
+  answerOrderArr = [],  // The (internal) array that stores the correct order of nodes
+  orderArr = [],        // Stores the node.id() of the jsavList
+  listArr = [],         // Stores the jsav list values
+  ptop,                 // pointer top
+  selected_pointer,     // pointer that is clicked, which will always be ptop here.
+  status = 0,           // Nothing is currently selected, status = 0;
+                        // pointer area is selected, status = 2;
+                        // pointer top is selected, status = 3.
+  newNodeGen,           //
+  newLinkNode,          // New node
+  odsa_head,            // head of the list for correct answer
+  connections = [],     //
+  fromNode,             //
+  toNode,               //
+  jsavList,             // JSAV list
+  listSize,             // JSAV list size
+  insertValue,          // Value to be inserted
+  userInput,            // Boolean: Tells us if user ever did anything
+  selected_node;        // Position that has been selected by user for swap
 
-var Edge = JSAV._types.ds.Edge;
+// JSAV extensions
 JSAV._types.ds.ListNode.prototype.odsa_next = {};
 JSAV._types.ds.ListNode.prototype.odsa_tail = {};
 JSAV._types.ds.ListNode.prototype.odsa_edgeToNext = {};
@@ -90,8 +90,9 @@ JSAV._types.Pointer.prototype.click = function(fn){
   var pointer = this;
   this.element.click(function(){fn(pointer)});
 }
+
 // pointer click handler
-var pclick = function(pointer){
+function pclick(pointer){
   selected_pointer = pointer;
   selected_pointer.element.toggleClass('highlight');
   status = 3;
@@ -165,7 +166,7 @@ function Connect(obj1, obj2){
 }
 
 // Click event handler on the list
-var clickHandler = function (e) {
+function clickHandler(e) {
   var x = parseInt(e.pageX - $('#' + this.id()).offset().left);
   var y = parseInt(e.pageY - $('#' + this.id()).offset().top);
   if(x > 31 && x < 42 && y > 0 && y < 31){	
@@ -217,7 +218,7 @@ function addTail(node){
   }
 }
 
-var f_newnode = function() { 
+function f_newnode() { 
   if (newNodeGen == false) {
     if(status == 2){
       $('#' + fromNode.id() + " .jsavpointerarea:first").removeClass('bgColor');
@@ -289,7 +290,7 @@ var f_newnode = function() {
   userInput = true;
 }
 
-var f_insert = function () {
+function f_insert() {
   if(newLinkNode){
     jsav.effects.copyValue(jsavArr, 0 , newLinkNode);
     newLinkNode.unhighlight();
@@ -298,7 +299,7 @@ var f_insert = function () {
 };
 
 // reset function definition
-var f_reset = function () {
+function f_reset() {
   userInput = false;
   newNodeGen = false;
   connections = [];
@@ -324,30 +325,31 @@ var f_reset = function () {
     jsavList.get(i).odsa_next = jsavList.get(i).next();
 	jsavList.get(i).odsa_edgeToNext = jsavList.get(i).edgeToNext();
   }
+  // Manually add a tail for the last node
   jsavList.get(listSize - 1).odsa_tail = jsav.g.line(34 + (listSize - 1)*74, 32 + 40,
                           44 + (listSize - 1)*74, 1 + 40,{"opacity": 100,"stroke-width": 1});
+  // 'top' pointer
   ptop = jsav.pointer("top", jsavList.get(0));
   ptop.click(pclick);
+
   // Hidden JSAV array for insert animation
   jsavArr = jsav.ds.array([insertValue], {indexed: false, center: false,left: 650, top: -70});
 
-  jsavList.click(clickHandler); // Rebind click handler after reset
+  jsavList.click(clickHandler);
   userInput = false;
 };
 // Initialise the exercise
-var initJSAV = function (size, value) {
-  
-  // Out with the old
+function initJSAV(size, value) {
+  // Global variables
   answerArr.length = 0;
-    // Give random numbers in range 0..999
+  listSize = size;
+  insertValue = value;
+
+  // Give random numbers in range 0..999
   for (i = 0; i < size; i++) {
     answerArr[i] = Math.floor(Math.random() * 1000);
   }
   listArr = answerArr.slice(0);
-
-  
-  listSize = size;
-  insertValue = value;
 
   f_reset();
 
@@ -364,10 +366,12 @@ var initJSAV = function (size, value) {
 };
 
 // Check user's answer for correctness: User's array must match answer
-var checkAnswer = function (arr_size) {
-  var i = 0;
-  var curr = odsa_head;
+function checkAnswer(arr_size) {
+  var i = 0, 
+    curr = odsa_head;
+
   if(ptop.target() !== odsa_head){return false;}
+
   while(curr.odsa_next){
     if(curr.value() == answerArr[i] && curr.id() == answerOrderArr[i]){
       curr = curr.odsa_next;
@@ -376,10 +380,12 @@ var checkAnswer = function (arr_size) {
       return false;
     }
   }
+
   if(i == listSize)
   {
     return true;
   }
+
   return false;
 };
 </script>
